--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>My Personal Website</title>
+  <title>Pada Zhao</title>
 </head>
 <body>
   <header>
     <h1>My Personal Website</h1>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Portfolio</a>
-      <a href="#">Contact</a>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
   <main>
@@ -38,11 +38,11 @@
     </section>
     <section id="contact">
       <h2>Contact Me</h2>
-      <p>You can contact me at [your email address] or [your phone number].</p>
+      <p>You can contact me at padazhao@163.com.</p>
     </section>
   </main>
   <footer>
-    <p>Copyright &copy; [your name] 2023</p>
+    <p>Copyright &copy; Pada Zhao 2023</p>
   </footer>
 </body>
 </html>
