--- a/index.html
+++ b/index.html
@@ -4,45 +4,63 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Pada Zhao</title>
+  <link rel="icon" href="images/webs_icon.ico">
+  <style>
+
+  </style>
 </head>
 <body>
-  <header>
-    <h1>My Personal Website</h1>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-  <main>
-    <section id="home">
-      <h2>Welcome to my website!</h2>
-      <p>I'm a [your profession] with a passion for [your interests]. I'm skilled in [your skills] and I'm always looking for new challenges.</p>
-      <p>I hope you enjoy exploring my website!</p>
-    </section>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>I'm [your name], and I'm a [your profession] with a passion for [your interests]. I'm skilled in [your skills] and I'm always looking for new challenges.</p>
-      <p>I'm originally from [your hometown], but I've been living in [your current city] for the past [number] years. I'm a graduate of [your alma mater], where I studied [your major].</p>
-      <p>In my spare time, I enjoy [your hobbies]. I'm also an avid traveler and I've been to [number] countries.</p>
-    </section>
-    <section id="portfolio">
-      <h2>My Portfolio</h2>
-      <p>Here is a selection of my work:</p>
-      <ul>
-        <li><a href="#">Project 1</a></li>
-        <li><a href="#">Project 2</a></li>
-        <li><a href="#">Project 3</a></li>
-      </ul>
-    </section>
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <p>You can contact me at padazhao@163.com.</p>
-    </section>
-  </main>
-  <footer>
-    <p>Copyright &copy; Pada Zhao 2023</p>
-  </footer>
+<header>
+  <h1>My Personal Website</h1>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#education">Education</a>
+    <a href="#project">Project</a>
+    <a href="#work">Work</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
+<main>
+  <section id="home">
+    <h2>Welcome to my website!</h2>
+    <p>Hello, my name is Xin Zhao. You can call my English name Pada.</p>
+    <p>I hope you know about me in details from this website!</p>
+  </section>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I'm Xin Zhao. It's nice to meet you. I'm study in XJTLU with a program name Msc Applied Informatics. I'm originally from Xinyang in Henan province, but I've been living in Suzhou for the past 6 years. In my spare time, I enjoy playing game and reading book.</p>
+    <p>I will complete my Master of Science degree in 03/2024. Now I want to find the opportunity of work related computer science background.</p>
+  </section>
+  <section id="education">
+    <h2>Education</h2>
+
+  </section>
+
+
+
+  <section id="project">
+    <h2>My Portfolio</h2>
+    <p>Here is a selection of my work:</p>
+    <ul>
+      <li><a href="#">Project 1</a></li>
+      <li><a href="#">Project 2</a></li>
+      <li><a href="#">Project 3</a></li>
+    </ul>
+  </section>
+
+  <section id="work">
+
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>You can contact me at padazhao@163.com.</p>
+  </section>
+</main>
+<footer>
+  <p>Copyright &copy; Pada Zhao 2023</p>
+</footer>
 </body>
+
 </html>
