--- a/index.html
+++ b/index.html
@@ -29,11 +29,42 @@
   </section>
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm Xin Zhao. It's nice to meet you. I'm study in XJTLU with a program name Msc Applied Informatics. I'm originally from Xinyang in Henan province, but I've been living in Suzhou for the past 6 years. In my spare time, I enjoy playing game and reading book.</p>
-    <p>I will complete my Master of Science degree in 03/2024. Now I want to find the opportunity of work related computer science background.</p>
+    <p>I'm Xin Zhao. It's nice to meet you. I'm 24 years old and studying in XJTLU with a program name Msc Applied Informatics. I'm
+      originally from Xinyang in HeNan province, but I've been living in Suzhou for the past 6 years. In my spare time,
+      I enjoy playing games and reading books.</p>
+    <p>I will complete my Master of Science degree in 03/2024. Now I want to find the opportunity of work related
+      computer science background.</p>
   </section>
   <section id="education">
     <h2>Education</h2>
+    <p>In 2017, after passing the National College Entrance Examination, I came to Xi'an Jiaotong-Liverpool University,
+      majoring in information and computing science.</p>
+    <p> In 2021, I completed my undergraduate degree program, and got my bachelor of science degree with second honours
+      degree. </p>
+    <p> During this time, I learnt many modules: Principles of Computer Games Design, Software Engineering, Multi-Agent
+      System, Machine learning, Big Data Analysis, Mobile Computing, Human-Centric Computing, Advanced OO Programming,
+      Computer Graphics, Computer Networking, Decision Computation and Language, Artificial Intelligence, Operating
+      System Concepts, Data Structures, Algorithm Foundations and Problem Solving, Discrete Mathematics and Statistic,
+      Programming in Java, Database</p>
+    <p>
+      Next, the scores for my Bsc. Year 1: 61%, Y2: 61%, Y3: 62%, Y4: 60%.
+    </p>
+    <p>
+      End of my undergraduate, I obtained offers of the Master of Information Technology at the University of Sydney and UNSW
+      Sydney in 2022.
+    </p>
+    <p>
+      However, because of COVID-19, I chose to apply the Master of Science in Applied of Informatics at XJTLU. I
+      enrolled in 09/2022.
+    </p>
+    <p>
+      During the past year, I learnt 8 modules: Research Method, Interactive System, Fundamentals of Machine Learning,
+      Data Mining and Big Data Analytics, Social Web Programming, Social Network Analysis, Software Architectures,
+      Technological Project Management.
+    </p>
+    <p>
+      In conclusion, I
+    </p>
 
   </section>
 
