--- a/index.html
+++ b/index.html
@@ -1,97 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pada Zhao</title>
-  <link rel="icon" href="images/webs_icon.ico">
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+      color: #333;
+      line-height: 1.6;
+    }
+    .container h1{
+      color: #77aaff;
+    }
+    .container p{
+      color: #77aaff;
+    }
+    .container {
 
+      width: 90%;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+
+    }
+    .right{
+      display: flex;
+      align-items: center;
+    }
+    .profile-photo {
+      width: 100px;
+      height: 100px;
+
+      object-fit: cover;
+    }
+    header {
+
+      background: #333;
+      color: #fff;
+      padding: 20px 0;
+      min-height: 70px;
+      border-bottom: #77aaff 4px solid;
+
+    }
+    header a {
+      color: #fff;
+      text-decoration: none;
+      text-transform: uppercase;
+      font-size: 14px;
+    }
+    header ul {
+      padding: 0;
+      list-style: none;
+    }
+    header ul li {
+      display: inline-block;
+      margin: 0 15px;
+    }
+    .showcase {
+      min-height: 400px;
+
+      text-align: center;
+      color: #fff;
+      padding-top: 100px;
+      box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.7);
+    }
+    .showcase h1 {
+      font-size: 48px;
+      margin: 0;
+    }
+    .showcase p {
+      font-size: 18px;
+    }
+    .content-section {
+      margin: 40px 0;
+    }
+    h2 {
+      color: #333;
+      padding-bottom: 10px;
+      border-bottom: 2px solid #77aaff;
+      font-size: 26px;
+    }
+
+    .education-item {
+      margin-bottom: 20px;
+    }
+
+    .education-item h3 {
+      font-size: 18px;
+      font-weight: bold;
+      margin: 0;
+    }
+
+    .education-item .date {
+      float: right;
+      font-weight: normal;
+      font-style: italic;
+      font-size: 14px;
+    }
+
+    .education-item p {
+      margin: 5px 0 0;
+      font-size: 14px;
+    }
+
+    .skills, .projects, .contact {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      margin: 20px 0;
+    }
+    .skills div, .projects div, .contact div {
+      width: 48%;
+      margin-bottom: 20px;
+    }
+    .skills div p, .projects div p, .contact div p {
+      font-size: 16px;
+      line-height: 1.5;
+    }
+    .download-btn {
+      display: inline-block;
+      padding: 12px 25px;
+      background-color: #77aaff;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 6px;
+      font-size: 16px;
+      margin-top: 20px;
+      transition: background-color 0.3s ease;
+    }
+    .download-btn:hover {
+      background-color: #5599ee;
+    }
+    @media (max-width: 768px) {
+      .skills div, .projects div, .contact div {
+        width: 100%;
+      }
+      header ul li {
+        display: block;
+        margin: 10px 0;
+      }
+    }
   </style>
 </head>
 <body>
 <header>
-  <h1>My Personal Website</h1>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#education">Education</a>
-    <a href="#project">Project</a>
-    <a href="#work">Work</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
-<main>
-  <section id="home">
-    <h2>Welcome to my website!</h2>
-    <p>Hello, my name is Xin Zhao. You can call my English name Pada.</p>
-    <p>I hope you know about me in details from this website!</p>
-  </section>
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I'm Xin Zhao. It's nice to meet you. I'm 24 years old and studying in XJTLU with a program name Msc Applied Informatics. I'm
-      originally from Xinyang in HeNan province, but I've been living in Suzhou for the past 6 years. In my spare time,
-      I enjoy playing games and reading books.</p>
-    <p>I will complete my Master of Science degree in 03/2024. Now I want to find the opportunity of work related
-      computer science background.</p>
-  </section>
-  <section id="education">
-    <h2>Education</h2>
-    <p>In 2017, after passing the National College Entrance Examination, I came to Xi'an Jiaotong-Liverpool University,
-      majoring in information and computing science.</p>
-    <p> In 2021, I completed my undergraduate degree program, and got my bachelor of science degree with second honours
-      degree. </p>
-    <p> During this time, I learnt many modules: Principles of Computer Games Design, Software Engineering, Multi-Agent
-      System, Machine learning, Big Data Analysis, Mobile Computing, Human-Centric Computing, Advanced OO Programming,
-      Computer Graphics, Computer Networking, Decision Computation and Language, Artificial Intelligence, Operating
-      System Concepts, Data Structures, Algorithm Foundations and Problem Solving, Discrete Mathematics and Statistic,
-      Programming in Java, Database</p>
-    <p>
-      Next, the scores for my Bsc. Year 1: 61%, Y2: 61%, Y3: 62%, Y4: 60%.
-    </p>
-    <p>
-      End of my undergraduate, I obtained offers of the Master of Information Technology at the University of Sydney and UNSW
-      Sydney in 2022.
-    </p>
-    <p>
-      However, because of COVID-19, I chose to apply the Master of Science in Applied of Informatics at XJTLU. I
-      enrolled in 09/2022.
-    </p>
-    <p>
-      During the past year, I learnt 8 modules: Research Method, Interactive System, Fundamentals of Machine Learning,
-      Data Mining and Big Data Analytics, Social Web Programming, Social Network Analysis, Software Architectures,
-      Technological Project Management.
-    </p>
-    <p>
-      In conclusion, I
-    </p>
+  <div class="container">
 
-  </section>
+    <div class="right">
+      <h1>Pada Zhao</h1>
 
+      <img src="images/you.jpg" alt="Pada" class = "profile-photo">
+    </div>
 
-
-  <section id="project">
-    <h2>My Portfolio</h2>
-    <p>Here is a selection of my work:</p>
     <ul>
-      <li><a href="#">Project 1</a></li>
-      <li><a href="#">Project 2</a></li>
-      <li><a href="#">Project 3</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#work-experience">Work Experience</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
-  </section>
 
-  <section id="work">
+  </div>
 
-  </section>
+</header>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>You can contact me at padazhao@163.com.</p>
-  </section>
-</main>
+<section class="showcase">
+  <div class="container">
+    <h1>Welcome to Pada's  Webpage</h1>
+    <p>Let life be beautiful like summer flowers and death like autumn leaves.</p>
+  </div>
+</section>
+
+<section class="container content-section" id="about">
+  <h2>About Me</h2>
+  <div class="education-item">
+    <h3><a href="https://www.xjtlu.edu.cn/en/study/masters/msc-applied-informatics" target="_blank">University of Liverpool</a> - Master of Science in Applied Informatics</h3>
+    <span class="date">Sep 2022 - Mar 2024</span>
+    <p>Courses: Research Methods, Interactive Systems, Fundamentals of Machine Learning,
+      Data Mining and Big Data Analytics, Social Web Programming, Social Network Analysis,
+      Software Architectures, Technological Project Management.</p>
+  </div>
+  <div class="education-item">
+    <h3><a href="https://www.xjtlu.edu.cn/en/study/undergraduate/information-and-computing-science" target="_blank">Xi'an Jiaotong-Liverpool University</a> - Bachelor of Science in Information and Computing Science</h3>
+    <span class="date">Sep 2017 - Jul 2021</span>
+    <p>Courses: Computer Systems, Databases, Programming in Java, Discrete Mathematics and Statistics
+    Algorithmic Foundations and Problem Solving, Data Structures, Operating Systems Concepts, Artificial Intelligence,
+    Decision Computation and Language, Networking, Software Engineering, Computer Graphics,
+    Complexity of Algorithms, Advanced OO Programming, Human-Centric Computing, Mobile Computing,
+    Big Data Analytics, Multi-Agent System, Principles of Computer Games Design.</p>
+  </div>
+</section>
+
+<section class="container content-section" id="work-experience">
+  <h2>Work Experience</h2>
+  <p>Details of your work experience and roles you have undertaken.</p>
+</section>
+
+<section class="container content-section" id="skills">
+  <h2>Skills</h2>
+  <div class="skills">
+    <div>
+      <ul>
+        <li>Skill 1</li>
+        <li>Skill 2</li>
+        <li>Skill 3</li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li>Skill 4</li>
+        <li>Skill 5</li>
+        <li>Skill 6</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<section class="container content-section" id="projects">
+  <h2>Projects</h2>
+  <div class="projects">
+    <div>
+      <p><strong>Project 1</strong></p>
+      <a href="https://project-link1.com" target="_blank">View Project</a>
+    </div>
+    <div>
+      <p><strong>Project 2</strong></p>
+      <a href="https://project-link2.com" target="_blank">View Project</a>
+    </div>
+  </div>
+</section>
+
+<section class="container content-section" id="contact">
+  <h2>Contact Me</h2>
+  <div class="contact">
+    <div>
+      <p>Email: padazhao@163.com</p>
+      <p>Phone: +86 18510951815</p>
+      <p>WeChat: 18510951815</p>
+    </div>
+    <div>
+      <a class="download-btn" href="files/Uol_MSc Applied Informatics_ Xin Zhao.pdf" download>Download My Resume</a>
+    </div>
+  </div>
+</section>
+
+
 <footer>
-  <p>Copyright &copy; Pada Zhao 2023</p>
+  <p style="text-align: center;">&copy; 2024 Pada Zhao</p>
 </footer>
 </body>
-
 </html>
