--- a/enVersion.html
+++ b/enVersion.html
@@ -5,275 +5,260 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pada Zhao</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+        * {
             margin: 0;
             padding: 0;
-            color: #333;
-            line-height: 1.6;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Arial, sans-serif;
         }
-        .container h1{
-            color: #77aaff;
-        }
-        .container p{
-            color: #77aaff;
-        }
-        .container {
 
-            width: 90%;
-            max-width: 1200px;
+        body {
+            line-height: 1.6;
+            color: #333;
+            background-color: #f5f5f5;
+        }
+
+        .container {
+            max-width: 800px;
             margin: 0 auto;
             padding: 20px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
 
+        header {
+            text-align: center;
+            padding: 10px 0;
+            border-bottom: 2px solid #eee;
         }
-        .right{
-            display: flex;
-            align-items: center;
-        }
-        .profile-photo {
-            width: 100px;
+
+        .avatar {
+            width: 70px;
             height: 100px;
 
-            object-fit: cover;
+            margin-bottom: 10px;
         }
-        header {
 
-            background: #333;
-            color: #fff;
+        section {
             padding: 20px 0;
-            min-height: 70px;
-            border-bottom: #77aaff 4px solid;
+            border-bottom: 1px solid #eee;
+        }
 
-        }
-        header a {
-            color: #fff;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-size: 14px;
-
-            transition: filter 0.3s ease; /* 设置过渡效果，使高亮更加平滑 */
-        }
-        header a:hover{
-            font-size: 16px;
-            filter: brightness(150%); /* 增加亮度到150% */
-
-        }
-        header ul {
-            padding: 0;
-            list-style: none;
-        }
-        header ul li {
-            display: inline-block;
-            margin: 0 15px;
-        }
-        .showcase {
-            min-height: 400px;
-
-            text-align: center;
-            color: #fff;
-            padding-top: 100px;
-            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.7);
-        }
-        .showcase h1 {
-            font-size: 48px;
-            margin: 0;
-        }
-        .showcase p {
-            font-size: 18px;
-        }
-        .content-section {
-            margin: 40px 0;
-        }
         h2 {
-            color: #333;
-            padding-bottom: 10px;
-            border-bottom: 2px solid #77aaff;
-            font-size: 26px;
+            color: #2c3e50;
+            margin-bottom: 15px;
         }
 
+        .experience-item,
         .education-item {
             margin-bottom: 20px;
         }
 
-        .education-item a {
-            color: blue; /* 初始文本颜色 */
-            text-decoration: none; /* 去掉下划线 */
-            font-size: 18px;
-            transition: filter 0.3s ease; /* 设置过渡效果，使高亮更加平滑 */
-        }
-
-        /* 鼠标悬浮时的样式 */
-        .education-item a:hover {
-            font-size: 20px;
-            filter: brightness(150%); /* 增加亮度到150% */
-        }
-
-
-        .education-item h3 {
-            font-size: 18px;
-            font-weight: bold;
-            margin: 0;
-        }
-
-        .education-item .date {
-            float: right;
-            font-weight: normal;
-            font-style: italic;
-            font-size: 14px;
-        }
-
-        .education-item p {
-            margin: 5px 0 0;
-            font-size: 14px;
-        }
-
-        .skills, .projects, .contact {
+        .skills {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
-            margin: 20px 0;
+            gap: 10px;
         }
-        .skills div, .projects div, .contact div {
-            width: 48%;
-            margin-bottom: 20px;
+
+        .skill-tag {
+            background-color: #3498db;
+            color: white;
+            padding: 5px 15px;
+            border-radius: 20px;
+            font-size: 0.9em;
         }
-        .skills div p, .projects div p, .contact div p {
-            font-size: 16px;
-            line-height: 1.5;
-        }
-        .download-btn {
-            display: inline-block;
-            padding: 12px 25px;
-            background-color: #77aaff;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 6px;
-            font-size: 16px;
-            margin-top: 20px;
-            transition: background-color 0.3s ease;
-        }
-        .download-btn:hover {
-            background-color: #5599ee;
-        }
-        @media (max-width: 768px) {
-            .skills div, .projects div, .contact div {
-                width: 100%;
-            }
-            header ul li {
-                display: block;
-                margin: 10px 0;
-            }
+        .lang-button {
+            position: absolute;
+            top: 20px;
+            right: 170px;
+            padding: 8px 12px;
+            font-size: 14px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-<header>
-    <div class="container">
+<div class="container">
+    <header>
+        <img src="images/pada.jpg" alt="pada" class="avatar">
+        <h1>Pada Zhao</h1>
+        <p>  padazhao@163.com | (+86)18510951815 </p>
+        <button  class="lang-button" title="切换到中文" onclick="window.location.href='index.html'">中</button>
 
-        <div class="right">
-            <h1>Pada Zhao</h1>
+    </header>
 
-            <img src="images/you.jpg" alt="Pada" class = "profile-photo">
+    <section id="education">
+        <h2>EDUCATIONAL BACKGROUND</h2>
+        <div class="education-item">
+            <h3>MSc Applied informatics</h3>
+            <p>University of Liverpool (09/2022-03/2024)</p>
+            <p>Courses: Research Methods, Data Mining and Big Data Analytics, Software Architectures, Technological Project Management,
+                Interactive Systems, Fundamentals of Machine Learning,
+                Social Web Programming, Social Network Analysis.
+            </p>
+            <p>GPA: 3.5/4.0</p>
+        </div>
+        <div class="education-item">
+            <h3>BSc Information and computing science</h3>
+            <p>Xi’an Jiaotong-Liverpool University (09/2017-07/2021)</p>
+            <p>Courses: Computer Systems, Data Structures, Introduction to Databases,
+                Operating Systems Concepts, Discrete Mathematics and Statistics,
+                Java Programming, Algorithmic Foundations and Problem-Solving,
+                Artificial Intelligence, Introduction to Networking, Software Engineering Group Project,
+                Software Engineering I, Advanced OO Programming, Human-Centric Computing,
+                Decision Computation and Language, Complexity of Algorithms
+                , Computer Graphics, Software Engineering II, Big Data Analytics,
+                Mobile Computing, Multi-Agent Systems, Principles of Computer Games Design,
+                Machine Learning.
+            </p>
+            <p>GPA: 3.4/4.0</p>
+        </div>
+    </section>
+
+    <section id="projects">
+        <h2>PROJECT EXPERIENCE</h2>
+        <div class="project-item">
+            <h3>Blockchain Driven Data Trading for AI Training Dataset (Master's Thesis)
+            </h3>
+            <p>Data trading is executed based on smart contracts written in Solidity on Ethereum.
+                Encrypted AI training dataset is uploaded through IPFS,
+                and then the blockchain is used to list and trade data. For dispute arbitration in transactions,
+                a data arbitration Agent is established through the large language model
+                ChatGPT and Google Bard to verify data. The similarity between data description and data
+                content is automatically judged to ensure reliable arbitration
+                results are given back to the blockchain smart contract.
+            </p>
+            <p >Link: <a href="#">https://github.com/padazhao/FMP</a></p>
+        </div>
+        <div class="project-item">
+            <h3>Master Admission System
+            </h3>
+            <p>The architecture design of the master's admissions system follows the standard three-tier architecture
+                model, including the presentation layer, service layer, and persistence layer. It uses SpringBoot as
+                the framework, Hibernate as the object-relational mapping (ORM), and Thymeleaf as the template engine.
+                The system follows the Model View Controller (MVC) pattern, which is used to organize code in a way that
+                separates concerns and improves maintainability and extensibility. The view component uses Thymeleaf as
+                the template engine to render HTML pages. The controller component handles HTTP requests and maps them
+                to the corresponding controllers and methods. The controller layer handles user requests and RESTful
+                endpoints to accept and process client requests. It sends requests to the corresponding services for
+                processing and coordinates the flow of business logic. The RestController class is also responsible
+                for returning the response to the view after processing is completed. </p>
+            <p>Link: <a href="#">https://github.com/padazhao/msc_admission_system</a></p>
+        </div>
+        <div class="project-item">
+            <h3>Classification of Biochip Data from Video Captures
+                of Changing Spot Values (Bachelor Thesis)
+
+            </h3>
+            <p>By building an Android application on the mobile terminal,
+                a video of the antibiotics in biological experiments changing
+                over time is placed in it. The application then slices the video
+                into several frames of pictures, and then calculates the RGB values
+                in each well plate through image recognition. The average RGB value in
+                each well plate represents the well plate, and then uses a machine learning
+                classification algorithm to summarize the changes in the color point values
+                in the well plate to classify the types of antibiotics. Finally, the information
+                is visualized and XAI is used to explain the logic of the final result selection process. </p>
+            <p>Link: <a href="#">https://github.com/padazhao/Final_Year_Project_for_biochips_video_captures</a></p>
+        </div>
+        <div class="project-item">
+            <h3>Time Manage Masters
+
+            </h3>
+            <p>In this project, the team designed a personal calendar that implements date viewing,
+                schedule making, and convenient personal time management. According to market research,
+                most Android time management applications have implemented basic calendar functions,
+                including date display, holiday reminders, and some schedule templates, such as
+                schedules, birthdays, anniversaries, countdowns, etc. In addition, considering the
+                wide range of user needs, this project is designed for all users who use Android
+                smartphones. Based on the research results, this project proposes some excellent
+                features, including improved edit ability, enhanced visualization, and more customized
+                services based on user choices.
+            </p>
+            <p>Link: <a href="#">https://gitee.com/master-of-time-management</a></p>
         </div>
 
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#work-experience">Work Experience</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+    </section>
 
-    </div>
-
-</header>
-
-<section class="showcase">
-    <div class="container">
-        <h1>Welcome to Pada's  Webpage</h1>
-        <p>Let life be beautiful like summer flowers and death like autumn leaves.</p>
-    </div>
-</section>
-
-<section class="container content-section" id="about">
-    <h2>About Me</h2>
-    <div class="education-item">
-        <h3><a href="https://www.xjtlu.edu.cn/en/study/masters/msc-applied-informatics" target="_blank">University of Liverpool</a> - Master of Science in Applied Informatics</h3>
-        <span class="date">Sep 2022 - Mar 2024</span>
-        <p>Courses: Research Methods, Interactive Systems, Fundamentals of Machine Learning,
-            Data Mining and Big Data Analytics, Social Web Programming, Social Network Analysis,
-            Software Architectures, Technological Project Management.</p>
-    </div>
-    <div class="education-item">
-        <h3><a href="https://www.xjtlu.edu.cn/en/study/undergraduate/information-and-computing-science" target="_blank">Xi'an Jiaotong-Liverpool University</a> - Bachelor of Science in Information and Computing Science</h3>
-        <span class="date">Sep 2017 - Jul 2021</span>
-        <p>Courses: Computer Systems, Databases, Programming in Java, Discrete Mathematics and Statistics
-            Algorithmic Foundations and Problem Solving, Data Structures, Operating Systems Concepts, Artificial Intelligence,
-            Decision Computation and Language, Networking, Software Engineering, Computer Graphics,
-            Complexity of Algorithms, Advanced OO Programming, Human-Centric Computing, Mobile Computing,
-            Big Data Analytics, Multi-Agent System, Principles of Computer Games Design.</p>
-    </div>
-</section>
-
-<section class="container content-section" id="work-experience">
-    <h2>Work Experience</h2>
-    <div class="work-item">
-        <h3>Teaching Assistant - </h3>
-    </div>
-</section>
-
-<section class="container content-section" id="skills">
-    <h2>Skills</h2>
-    <div class="skills">
-        <div>
+    <section id="experience">
+        <h2>Work Experience</h2>
+        <div class="experience-item">
+            <h3>Xi’an Jiaotong-Liverpool University -Teaching assistant for Technologies for E-Commerce Course (02/2023 - 05/2023)</h3>
             <ul>
-                <li>Skill 1</li>
-                <li>Skill 2</li>
-                <li>Skill 3</li>
+                <li>Assist professors in completing code teaching for e-commerce technology courses and coach students to complete PHP codes related to the course.</li>
+                <li>Help students improve their programming and teamwork skills through timely feedback.</li>
+                <li>Check students' code homework, give corresponding homework evaluation, and guide students in their studies.</li>
             </ul>
         </div>
-        <div>
+
+        <div class="experience-item">
+            <h3>Xi’an Jiaotong-Liverpool University -Teaching assistant for Data Structure Course (02/2023 - 04/2023）</h3>
             <ul>
-                <li>Skill 4</li>
-                <li>Skill 5</li>
-                <li>Skill 6</li>
+                <li>Assist professors in completing code teaching for data structure courses and coach students to complete Java codes related to the course.</li>
+                <li>Answer students' questions about data structure related code.</li>
+                <li>Help students understand code implementation issues of various data structures.</li>
             </ul>
         </div>
-    </div>
-</section>
 
-<section class="container content-section" id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-        <div>
-            <p><strong>Project 1</strong></p>
-            <a href="https://project-link1.com" target="_blank">View Project</a>
+        <div class="experience-item">
+            <h3>Dejax - Assistant Project Manager (09/2021 - 10/2021)</h3>
+            <ul>
+                <li>Participate in and assist the project manager in project management, including project planning, progress tracking, risk control, etc.</li>
+                <li>Responsible for the organization and writing of project documents and recording meeting minutes.</li>
+                <li>Coordinate the work among project team members, solve problems encountered during the project, track and monitor project progress, and report to the project manager in a timely manner.</li>
+                <li>
+                    Successfully assisted in the management of three sub-projects, ensuring 100% of the projects were delivered on time.
+                </li>
+            </ul>
         </div>
-        <div>
-            <p><strong>Project 2</strong></p>
-            <a href="https://project-link2.com" target="_blank">View Project</a>
-        </div>
-    </div>
-</section>
 
-<section class="container content-section" id="contact">
-    <h2>Contact Me</h2>
-    <div class="contact">
-        <div>
-            <p>Email: padazhao@163.com</p>
-            <p>Phone: +86 18510951815</p>
-            <p>WeChat: 18510951815</p>
+        <div class="experience-item">
+            <h3>Dataa Robotics - Data Annotation Intern (07/2020 - 09/2020）</h3>
+            <ul>
+                <li>Participated in the visual recognition algorithm data training of the company's cloud vending machine project, helping algorithm engineers obtain high-quality labeled training data.</li>
+                <li>Discover and record errors and problems in the algorithm recognition results, providing important basis for algorithm optimization and evaluation.</li>
+                <li>Responsible for testing relevant algorithm results and assisting test engineers in testing, and reporting related issues to the team.
+                </li>
+                <li>
+                    It improves the quality of labeled data and enhances the efficiency of the algorithm team.
+                </li>
+            </ul>
         </div>
-        <div>
-            <a class="download-btn" href="files/Uol_MSc Applied Informatics_ Xin Zhao.pdf" download>Download My Resume</a>
-        </div>
-    </div>
-</section>
+
+    </section>
 
 
+
+    <section id="skills">
+        <h2>SKILLS</h2>
+        <div class="skills">
+            <ul>
+                <li><h3>Programming skills:</h3>
+                    <p>Proficient in Java, Python, Spring Boot, Hibernate, Spring MVC, Mybatis, Thymeleaf,
+                        HTML, CSS, JavaScript, MySQL, RESTful AP, object-oriented design, and Scrum methodology. </p>
+
+                </li>
+                <li>
+                    <h3>Language level: </h3>
+                    <p>Proficient in English communication (both undergraduate and postgraduate courses are taught in English).</p>
+                </li>
+            </ul>
+
+
+
+
+        </div>
+    </section>
+
+
+
+    <section id="about">
+        <h2>Self Evaluation</h2>
+        <p>I love programming, I like to challenge technical problems, I have good teamwork and communication skills. I pay attention to details in the project, and I keep learning and improving my skills.</p>
+    </section>
+</div>
 <footer>
-    <p style="text-align: center;">&copy; 2024 Pada Zhao</p>
+    <p style="text-align: center;">&copy; 2025 Pada Zhao</p>
 </footer>
 </body>
 </html>
